# blopex

./: LICENSE  README  README.md
blopex_abstract/: CMakeLists.txt  Makefile  Makefile.inc
blopex_abstract/include/: lobpcg.h  temp_multivector.h
blopex_abstract/krylov/: CMakeLists.txt  lobpcg.c  lobpcg.h
blopex_abstract/multivector/: CMakeLists.txt  Makefile  interpreter.h  multivector.c  multivector.h  temp_multivector.c  temp_multivector.h
blopex_abstract/utilities/: CMakeLists.txt  fortran_interpreter.h  fortran_matrix.c  fortran_matrix.h  fortran_options.h
blopex_hypre/: Readme  before_make.sh
blopex_hypre/hypre_setup/: abstract_update  create_tar  diffchk
blopex_hypre/krylov/: HYPRE_MatvecFunctions.h  HYPRE_lobpcg.c  HYPRE_lobpcg.h
blopex_hypre/parcsr_ls/: HYPRE_parcsr_int.c  HYPRE_parcsr_int.h  ame.c
blopex_hypre/sstruct_ls/: HYPRE_sstruct_int.c  HYPRE_sstruct_int.h
blopex_hypre/struct_ls/: HYPRE_struct_int.c  HYPRE_struct_int.h
blopex_hypre/test/: ex11.c  ij.c  sstruct.c  struct.c
blopex_hypre/utilities/: fortran_options.h
blopex_matlab/: Makefile  readme
blopex_matlab/driver/: FEMDiscretizeSq.m  blopex_matlab.m  blopex_matlab_gateway.c  lobpcg.m  precond.m  precondD.m  precondIC.m  test_blopex_matlab.m
blopex_matlab/driver/test_complex/: test_cluster_complex.m  test_laplace2d_perturbed_complex.m  test_random_dense_complex.m  test_random_sparse_complex.m
blopex_matlab/driver/test_real/: multA.m  multB.m  test_diag.m  test_laplace2d.m  test_laplace2d_FEM.m  test_random_dense_real.m  test_random_sparse_real.m
blopex_matlab/matlab_interface/c_files/: matlab_interface.c  matlab_interface.h  multivector_for_matlab.c  multivector_for_matlab.h
blopex_matlab/matlab_interface/m_files/: matlabCopyMultiVector.m  matlabMultiAxpy.m  matlabMultiInnerProd.m  matlabMultiInnerProdDiag.m  matlabMultiMatVec.m  matlabMultiVectorByDiag.m  matlabMultiVectorByMatrix.m
blopex_petsc/: Makefile  Makefile.inc  Petsc32to64.m  PetscBinaryRead.m  PetscBinaryWrite.m  PetscBinaryWrite_test.m  PetscWriteReadExample.m  Readme  Readme.txt  hpd_matrix.m
blopex_petsc/driver/: Makefile  driver.c
blopex_petsc/driver_fiedler/: DL-matrix-complex.petsc  DL-matrix-complex_64.petsc  DL-matrix-double.petsc  DL-matrix-double_64.petsc  L-matrix.petsc  Makefile  driver_fiedler.c  test_complex1.petsc  test_complex1_64.petsc  test_complex2.petsc  test_complex2_64.petsc  test_complex3.petsc  test_complex3_64.petsc
blopex_petsc/driver_fortran/: README  blopex_c.c
blopex_petsc/petsc-interface/: Makefile  petsc-interface.c  petsc-interface.h
blopex_petsc/petsc_setup/: abstract_list  copyfiles  cr_abstract_tar  cr_interface_tar  cr_interface_tar_list  cr_test_tar  cr_test_tar_list  interface_list  test_list
blopex_petsc/utilities/: fortran_options.h
blopex_serial/driver/: serial_driver.c
blopex_serial/matmultivec/: Makefile
blopex_serial/multivector/: multi_vector.c  multi_vector.h
blopex_serial/pcg_multi/: pcg_multi.c  pcg_multi.h
blopex_serial_complex/: Makefile  Makefile.inc  Readme.txt
blopex_serial_complex/driver/: Makefile  serial_driver.c  test1a.txt  test1x.txt  test2a.txt  test2x.txt
blopex_serial_complex/matmultivec/: matmultivec.c  matmultivec.h
blopex_serial_complex/multivector/: multi_vector.c  multi_vector.h
blopex_serial_complex/pcg_multi/: Makefile  pcg_multi.c  pcg_multi.h
blopex_serial_double/: Makefile.inc  Readme  Readme.txt
blopex_serial_double/driver/: Makefile  serial_driver.c
blopex_serial_double/matmultivec/: matmultivec.c  matmultivec.h
blopex_serial_double/multivector/: Makefile  multi_vector.c  multi_vector.h
blopex_serial_double/pcg_multi/: Makefile  pcg_multi.c  pcg_multi.h
blopex_tools/matlab/: README.md
blopex_tools/matlab/laplacian/: laplacian.m  license.txt
blopex_tools/matlab/lobpcg/: license.txt  lobpcg.m  lobpcg_Rev_4_13.m
blopex_tools/matlab/matlab2hypre/: hypreIJ2matlab.m  hypreParVectors2matlab.m  license.txt  matlab hypre demo.txt  matlab2hypreIJ.m  matlab2hypreParVectors.m
